# energy-aware-logging-mechanism

./: .env.template  .gitignore  README.md  pyproject.toml
backend/: .env.template  generate_mlp_data.py  main.py  pyproject.toml  setup_cnn.py  setup_models.py
backend/ai_models/: cnn.py  mlp.py
backend/app/: app.py
backend/app/core/: logging.py
backend/app/database/: db.py
backend/app/models/: datasets.py  enums.py  experiments.py
backend/app/routers/: dataset.py  experiments.py
backend/app/schemas/: datasets.py  experiments.py
backend/app/services/: base_model.py  cnn_service.py  experiment_service.py  mlp_service.py  model_factory.py  models_service.py
frontend/: Home.py
frontend/pages/: 1_Upload.py  2_Experiments.py
